--- a/src/templates/index.njk
+++ b/src/templates/index.njk
@@ -1,8 +1,36 @@
 {% extends "../templates/base.njk" %}
 
 {% block content %}
-    <div class="max-w-4xl px-4 mx-auto">
+    <div class="max-w-5xl px-4 mx-auto">
         <h1 class="text-2xl font-bold">Hello World</h1>
+
+        {% import "../templates/components/card.njk" as cardComponent %}
+
+        {% set cardContents = [
+            {
+                title: 'Welcome to focus within 👋',
+                description: 'Nullam habitasse litora sagittis dui facilisis nec etiam dolor montes malesuada duis ultrices nam',
+                imageUrl: 'https://source.unsplash.com/random/600x348'
+            },
+            {
+                title: 'Glad to have you around',
+                description: 'Nullam habitasse litora sagittis dui facilisis nec etiam dolor montes malesuada duis ultrices nam',
+                imageUrl: 'https://source.unsplash.com/random/600x348'
+            },
+            {
+                title: 'Hope this helps',
+                description: 'Nullam habitasse litora sagittis dui facilisis nec etiam dolor montes malesuada duis ultrices nam',
+                imageUrl: 'https://source.unsplash.com/random/600x348'
+            }
+        ] %}
+
+        <div class="flex-wrap md:flex md:-mx-4">
+        {% for cardContent in cardContents %}
+            <div class="px-4 mt-8 md:w-1/3 md:mt-0">
+                {{ cardComponent.content(cardContent)}}
+            </div>
+        {% endfor %}
+        </div>
     </div>
 
 {% endblock %}
