--- a/src/templates/components/card.njk
+++ b/src/templates/components/card.njk
@@ -1,7 +1,11 @@
 {% macro content(card) %}
 
-    <div class="w-full h-full overflow-hidden bg-white rounded-lg shadow-xl">
-        <img src="{{ card.imageUrl }}" class="w-full" alt="random image" />
+    <div class="w-full h-full overflow-hidden bg-white rounded-lg shadow-xl group">
+        <img
+            src="{{ card.imageUrl }}"
+            class="w-full transition-all duration-200 ease-in filter-grayscale group-hover:filter-reset"
+            alt="random image"
+        />
         <div class="p-4">
             <h2 class="text-2xl font-bold text-pink-600">
                 {{ card.title }}
