Extract in CSS using @apply

--- a/src/styles/style.pcss
+++ b/src/styles/style.pcss
@@ -2,9 +2,14 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+/* Configuration */
 @import './configuration/fonts.pcss';
 
+/* Custom Utilities */
 @import './utilities/filters.pcss';
+
+/* Components */
+@import './components/button.pcss';
 
 
 
