--- a/src/templates/index.njk
+++ b/src/templates/index.njk
@@ -20,7 +20,11 @@
             {
                 title: 'Hope this helps',
                 description: 'Nullam habitasse litora sagittis dui facilisis nec etiam dolor montes malesuada duis ultrices nam',
-                imageUrl: 'https://source.unsplash.com/random/600x348'
+                imageUrl: 'https://source.unsplash.com/random/600x348',
+                link: {
+                    text: 'Show Details',
+                    href: 'https://wentsch.me'
+                }
             }
         ] %}
 
