--- a/src/templates/components/card.njk
+++ b/src/templates/components/card.njk
@@ -13,6 +13,16 @@
             <p class="mt-3">
                 {{ card.description }}
             </p>
+
+            {% if card.link.href %}
+
+            <a
+                class="mt-4 c-button"
+                href="{{ card.link.href }}"
+            >
+                {{ card.link.text }}
+            </a>
+            {% endif %}
         </div>
     </div>
 
