--- a/src/styles/style.pcss
+++ b/src/styles/style.pcss
@@ -3,6 +3,8 @@
 @import "tailwindcss/utilities";
 
 @import './configuration/fonts.pcss';
+@import './utilities/filters.pcss';
+@import './components/button.pcss';
 
 
 
