--- a/src/templates/index.njk
+++ b/src/templates/index.njk
@@ -1,8 +1,40 @@
 {% extends "../templates/base.njk" %}
 
 {% block content %}
-    <div class="max-w-4xl px-4 mx-auto">
-        <h1 class="text-2xl font-bold">Hello World</h1>
+
+    {% set cardContents = [
+        {
+            title: 'Welcome to Focus Within 👋',
+            description: 'Quisque ultricies nunc euismod facilisi Tellus habitasse habitant ridiculus egestas placerat nisl taciti',
+            imageUrl: 'https://source.unsplash.com/random/600x350/'
+        },
+        {
+            title: 'Here is the new thing',
+            description: 'Quisque ultricies nunc euismod facilisi Tellus habitasse habitant ridiculus egestas placerat nisl taciti',
+            imageUrl: 'https://source.unsplash.com/random/600x350/',
+            link: {
+                text: 'Show details',
+                href: 'https://wentsch.me'
+            }
+        },
+        {
+            title: 'Glad you found this',
+            description: 'Quisque ultricies nunc euismod facilisi Tellus habitasse habitant ridiculus egestas placerat nisl taciti',
+            imageUrl: 'https://source.unsplash.com/random/600x350/'
+        }
+    ] %}
+
+    {% import "../templates/components/card.njk" as cardComponent %}
+
+    <div class="max-w-5xl px-4 mx-auto">
+        <div class="md:flex md:-mx-6">
+            {% for cardContent in cardContents %}
+                <div class="mt-6 md:w-1/3 md:px-6 md:mt-0">
+                    {{ cardComponent.content(cardContent) }}
+                </div>
+            {% endfor %}
+        </div>
+
     </div>
 
 {% endblock %}
